# LauncherToolV2

.github/workflows/: tauri-release.yml
fallen-world-launcher/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
fallen-world-launcher/.github/workflows/: release.yml
fallen-world-launcher/src/: App.tsx  main.tsx
fallen-world-launcher/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
fallen-world-launcher/src-tauri/capabilities/: default.json
fallen-world-launcher/src-tauri/icons/: icon.icns  icon.ico.bak
fallen-world-launcher/src-tauri/src/: loot_template.json  main.rs  models.rs
fallen-world-launcher/src-tauri/src/commands/: debug.rs  enb.rs  fomod.rs  game.rs  ini.rs  linux.rs  loot.rs  mcm.rs  mod.rs  mods.rs  monitor.rs  onboarding.rs  presets.rs  profiles.rs  system.rs  updates.rs  validation.rs
fallen-world-launcher/src-tauri/src/services/: anomaly_update.rs  changelog.rs  clf3.rs  default_changelog.md  enb_manager.rs  file_service.rs  fluorine.rs  fomod_installer.rs  fomod_service.rs  game_launcher.rs  ini_manager.rs  linux_bootstrap.rs  load_order_validator.rs  logger.rs  loot_scarcity.rs  mcm_manager.rs  mo2_integration.rs  mod.rs  mod_detector.rs  mod_manager.rs  mods_manager.rs  onboarding.rs  path_discovery.rs  path_service.rs  platform.rs  preset_manager.rs  profile_manager.rs  system_info.rs  system_monitor.rs  system_tasks.rs  update_manager.rs  youtube.rs
fallen-world-launcher/src/components/: ComingSoon.tsx  LauncherTutorial.tsx  LootScarcityPanel.tsx  RadioPlayer.tsx  SetupRequired.tsx  Sidebar.tsx  ThemeBadge.tsx  (+1 more)
(+38 files in other folders)
